trying shader stuff

--- a/kinect-project.vcxproj.filters
+++ b/kinect-project.vcxproj.filters
@@ -27,4 +27,8 @@
   <ItemGroup>
     <ResourceCompile Include="icon.rc" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\data\test.frag" />
+    <None Include="bin\data\test.vert" />
+  </ItemGroup>
 </Project>
